# rgri

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  requirements.txt  vcpkg.json
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt
docs/docs_doxygen/: Doxyfile.in
docs/src/: cpp_doxygen_sphinx.cpp
examples/: CMakeLists.txt  Makefile  assign_example.cpp  basic_ewise.cpp  basic_matrix.cpp  basic_multiply.cpp  binary_io.cpp  breadth_first_search.cpp  csr_test.cpp  ewise_example.cpp  generate.hpp  kernels.hpp  matrix_stdalgs.cpp  mdspan_example.cpp  multiply_example.cpp  nwgraph_example.cpp  test.cpp  test_basic.cpp  test_csr_matrix.cpp  test_matrix.cpp  test_mdspan.cpp  test_mxm.cpp  vector.cpp  view_experiments.cpp  views_example.cpp  views_help.hpp
examples/algorithms/: CMakeLists.txt  Makefile  betweenness_centrality.cpp  breadth_first_search.cpp  level_bfs.cpp  maximal_independent_set.cpp  parent_bfs.cpp  sssp.cpp  triangle_counting.cpp
examples/chesapeake/: chesapeake.mtx
examples/experimental/: Makefile  allocator_test.cpp  binsparse_example.cpp  device_spmv.cpp  grb_help.hpp  grb_test.cpp  grb_test2.cpp  mdspan_example.cpp  nwgraph_example.cpp  shared_test.cpp  sycl_help.hpp  sycl_ptr.hpp  vector.hpp  view_experiments.cpp
examples/sycl/: Makefile  allocator_test.cpp  device_spmv.cpp  grb_help.hpp  grb_test.cpp  shared_spmv.cpp  shared_test.cpp
examples/sycl/binsparse_io/: Makefile  binsparse_example.cpp
include/: CMakeLists.txt
include/grb/: CMakeLists.txt  grb.hpp
include/grb/algorithms/: algorithms.hpp  assign.hpp  dot.hpp  ewise.hpp  ewise_algs.hpp  multiply.hpp  mxv.hpp  permute.hpp  reduce.hpp
include/grb/containers/: matrix.hpp  matrix_element.hpp  matrix_entry.hpp  matrix_impl.hpp  matrix_iterator.hpp  matrix_reference.hpp  semiring.hpp  vector.hpp  vector_entry.hpp
include/grb/containers/backend/: coo_matrix.hpp  csr_matrix.hpp  csr_matrix_impl.hpp  csr_matrix_iterator.hpp  csr_matrix_reference.hpp  dense_matrix.hpp  dense_matrix_impl.hpp  dense_matrix_iterator.hpp  dense_matrix_reference.hpp  dense_vector.hpp  dense_vector_iterator.hpp  dia_matrix.hpp  dia_matrix_iterator.hpp
include/grb/containers/functional/: functional.hpp  op_definitions.hpp  semiring.hpp  semiring_definitions.hpp
include/grb/containers/views/: all.hpp  complement_view.hpp  filter.hpp  filter_matrix.hpp  full_matrix_view.hpp  full_vector_view.hpp  masked_view.hpp  matrix_view.hpp  ones_view.hpp  submatrix_view.hpp  transform.hpp  transform_matrix.hpp  transform_matrix_view.hpp  transform_matrix_view_iterator.hpp  transform_matrix_view_reference.hpp  transform_vector.hpp  transform_view.hpp  transpose_matrix.hpp  transpose_matrix_view.hpp  transpose_matrix_view_iterator.hpp  transpose_matrix_view_reference.hpp  views.hpp
include/grb/containers/views/traditional_formats/: csr_matrix_view.hpp
include/grb/detail/: concepts.hpp  cpos.hpp  detail.hpp  detect_index.hpp  get.hpp  iterator_adaptor.hpp  matrix_traits.hpp  monoid_traits.hpp  pack_includes.hpp  ranges.hpp  spanner.hpp  tag_invoke.hpp
include/grb/exceptions/: exception.hpp
include/grb/experimental/: coo.hpp  experimental.hpp  transform_matrix_view.hpp  transform_matrix_view_iterator.hpp  transform_matrix_view_reference.hpp
include/grb/experimental/sycl_tools/: algorithms.hpp  allocators.hpp  copy.hpp  device_matrices.hpp  device_ptr.hpp  device_ref.hpp  sycl_tools.hpp  tools.hpp  vector.hpp
include/grb/util/: binsparse_io.hpp  generate.hpp  hdf5_tools.hpp  index.hpp  index_t.hpp  matrix_hints.hpp  matrix_io.hpp  mm_io.hpp  printing.hpp  read_matrix.hpp  util.hpp
packaging/: CMakeLists.txt
tests/: CMakeLists.txt  Makefile  algorithms_1.hpp  matrix_iterator_1.hpp  matrix_methods_1.hpp  matrix_methods_2.hpp  matrix_methods_3.hpp  test_ops_1.hpp  tests.cpp  vector_iterator_1.hpp
tests/Catch2/: CMakeLists.txt  Makefile  algorithms_1.hpp  matrix_iterator_1.hpp  matrix_methods_1.hpp  matrix_methods_2.hpp  matrix_methods_3.hpp  test_ops_1.hpp  tests.cpp  vector_iterator_1.hpp
