function(add_example example_name)
  add_executable(${example_name} ${example_name}.cpp)
  target_link_libraries(${example_name} rgri)
endfunction()

add_example(assign_example)
add_example(basic_ewise)
add_example(basic_matrix)
add_example(basic_multiply)
add_example(ewise_example)
add_example(matrix_stdalgs)
add_example(multiply_example)
add_example(test)
add_example(views_example)
